--- a/src/app/contact-us/ui/contact-form/contact-form.component.scss
+++ b/src/app/contact-us/ui/contact-form/contact-form.component.scss
@@ -8,7 +8,6 @@
   border-radius: 20px;
   box-shadow: 0px 0px 8px 0px rgba(13, 153, 255, 0.4);
   width: 100%;
-  max-width: 1066px; /* Figma: w-[1066px] */
   margin: 0 auto;
 }
 
